--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,4 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558 
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
@@ -9,6 +7,7 @@
             "command": "/usr/bin/gcc",
             "args": [
                 "-g",
+                "--std=c++17",
                 "${fileDirname}/*.cc",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}.out"
@@ -44,6 +43,49 @@
             "type": "shell",
             "command": "${fileDirname}/${fileBasenameNoExtension}.out",
             "group": "build"
-        }
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++ 활성 파일 빌드",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "디버거에서 생성된 작업입니다."
+        },
+        {
+            "type": "shell",
+            "label": "clang++ build active file -v 1.0",
+            "command": "/usr/bin/clang++",
+            "args": [
+              "-std=c++17",
+              "-stdlib=libc++",
+              "-g",
+              "${file}",
+              "-o",
+              "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+              "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": ["$gcc"],
+            "group": {
+              "kind": "build",
+              "isDefault": true
+            }
+          }
     ]
 }
